add buttons for create/connect and conditional rendering

--- a/examples/canvas/public/index.html
+++ b/examples/canvas/public/index.html
@@ -8,6 +8,12 @@
     </head>
 
     <body>
+        <div style="margin-bottom: 10px">
+            <p>Connected to <span id="canvasId"></span></p>
+            <input type="text" placeholder="Insert canvas ID" />
+            <button id="connect">Connect</button>
+            <button id="create">Create Canvas</button>
+        </div>
         <div id="canvas"></div>
         <script src="./static/bundle/script.js"></script>
     </body>
