pubsub discovery; browsers connecting w/ ea other; static relay peerId

--- a/examples/canvas/public/index.html
+++ b/examples/canvas/public/index.html
@@ -10,7 +10,11 @@
     <body>
         <div style="margin-bottom: 10px">
             <p>Connected to <span id="canvasId"></span></p>
-            <input type="text" placeholder="Insert canvas ID" />
+            <input
+                id="canvasIdInput"
+                type="text"
+                placeholder="Insert canvas ID"
+            />
             <button id="connect">Connect</button>
             <button id="create">Create Canvas</button>
         </div>
