--- a/examples/canvas/public/index.html
+++ b/examples/canvas/public/index.html
@@ -10,6 +10,9 @@
     <body>
         <div style="margin-bottom: 10px">
             <p>Connected to <span id="canvasId"></span></p>
+            <p>peers: <span id="peers"></span></p>
+            <p>discovery_peers: <span id="discovery_peers"></span></p>
+            <p>object_peers: <span id="object_peers"></span></p>
             <input
                 id="canvasIdInput"
                 type="text"
