fix compiling errors; ditch webpack for vite

--- a/examples/chat/index.html
+++ b/examples/chat/index.html
@@ -46,6 +46,6 @@
       });
     </script>
 
-    <script src="./static/bundle/script.js"></script>
+    <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
