fix examples for the refactor

--- a/examples/canvas/index.html
+++ b/examples/canvas/index.html
@@ -22,6 +22,6 @@
             <button id="create">Create Canvas</button>
         </div>
         <div id="canvas"></div>
-        <script src="./static/bundle/script.js"></script>
+        <script type="module" src="/src/index.ts"></script>
     </body>
 </html>
