--- a/examples/grid/index.html
+++ b/examples/grid/index.html
@@ -8,15 +8,20 @@
   <body>
     <div>
       <h1>Topology Protocol - Grid</h1>
-      <p>Your peer ID <span id="peerId"></span></p>
-      <p>Connected to CRO ID: <span id="gridId"></span></p>
-      <p>Peers: <span id="peers"></span></p>
-      <p>Discovery_peers: <span id="discoveryPeers"></span></p>
-      <p>Object_peers: <span id="objectPeers"></span></p>
+      <p>Your Peer ID: <span id="peerId"></span></p>
+      <p>Peers on dRAM: <span id="peers"></span></p>
+      <p>Discovery Peers: <span id="discoveryPeers"></span></p>
 
-      <input id="gridInput" type="text" placeholder="Grid ID" />
-      <button id="joinGrid">Connect</button>
-      <button id="createGrid">Create Grid</button>
+      <button id="createGrid">Spawn a new Grid CRO</button>
+      <span style="margin: 0 10px;">|</span>
+      <input id="gridInput" type="text" placeholder="Enter Grid CRO ID" />
+      <button id="joinGrid">Connect to existing Grid CRO</button>
+      <p>
+        Connected to Grid CRO ID:
+        <span id="gridId" style="text-decoration: underline;"></span>
+        <button id="copyGridId" style="margin-left: 10px; display: none;">Copy</button>
+      </p>
+      <p>Peers in CRO: <span id="objectPeers"></span></p>
     </div>
 
     <div
