--- a/examples/grid/index.html
+++ b/examples/grid/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div>
-      <h1>Topology Protocol - Grid</h1>
+      <h1>A 2D grid made with CRO</h1>
       <p>Your Peer ID: <span id="peerId"></span></p>
       <p>Peers on dRAM: <span id="peers"></span></p>
       <p>Discovery Peers: <span id="discoveryPeers"></span></p>
