--- a/examples/local-bootstrap/index.html
+++ b/examples/local-bootstrap/index.html
@@ -22,7 +22,7 @@
               </td></tr>
               <tr><td><span id="bootstrap_addr_type"></span></td><td><input type="text" value="127.0.0.1" placeholder="0.0.0.0" id="bootstrap_node_addr"/></td></tr>
               <tr><td>Port</td><td><input type="text" value="50000" placeholder="00000" id="bootstrap_node_port"/></td></tr>
-              <tr><td>Peer ID</td><td><input type="text" placeholder="Qm..." id="bootstrap_node_peer_id"/></td></tr>
+              <tr><td>Peer ID</td><td><input type="text" placeholder="12D3..." id="bootstrap_node_peer_id"/></td></tr>
               <tr><td>Web socket protocol</td><td>
                 <input type="radio" id="ws" name="websocket_protocol" checked>
                 <label for="ws">ws</label>
@@ -34,43 +34,10 @@
           </form>
         </fieldset>
       </p>
-      <p>Connecting to the node <span id="bootstrapNode"></span></p>
-      <p>Current peer ID <span id="peerId"></span></p>
-      <p>Connected to <span id="chatId"></span></p>
+      <p>Connecting to bootstrap node: <span id="bootstrapNode"></span></p>
+      <p>Current peer ID: <span id="peerId"></span></p>
       <p>peers: <span id="peers"></span></p>
-      <p>discovery_peers: <span id="discoveryPeers"></span></p>
-      <p>object_peers: <span id="objectPeers"></span></p>
-
-      <input id="roomInput" type="text" placeholder="Room ID" />
-      <button id="joinRoom">Connect</button>
-      <button id="createRoom">Create Room</button>
     </div>
-
-    <div
-      id="chat"
-      style="
-        overflow-y: scroll;
-        min-height: 200px;
-        max-height: 60vh;
-        width: 100%;
-      "
-    >
-      <!-- Messages will appear here -->
-    </div>
-
-    <div style="margin-bottom: 10px">
-      <input id="messageInput" type="text" placeholder="Message" />
-      <button id="sendMessage">Send</button>
-    </div>
-
-    <script>
-      var input = document.getElementById("messageInput");
-      input.addEventListener("keypress", function (event) {
-        if (event.key === "Enter") {
-          document.getElementById("sendMessage").click();
-        }
-      });
-    </script>
 
     <script type="module" src="/src/index.ts"></script>
   </body>
