refactor the examples

--- a/examples/chat/index.html
+++ b/examples/chat/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Topology - Chat</title>
+    <title>DRP - Chat</title>
   </head>
   <body>
     <div>
-      <h1>Topology Protocol - Chat</h1>
+      <h1>DRP - Chat</h1>
       <p>Current peer ID <span id="peerId"></span></p>
       <p>Connected to <span id="chatId"></span></p>
       <p>peers: <span id="peers"></span></p>
