--- a/examples/grid/index.html
+++ b/examples/grid/index.html
@@ -3,25 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Topology - Grid</title>
+    <title>DRP - Grid</title>
   </head>
   <body>
     <div>
-      <h1>A 2D grid made with CRO</h1>
+      <h1>A 2D grid made with DRP</h1>
       <p>Your Peer ID: <span id="peerId"></span></p>
       <p>Peers on dRAM: <span id="peers"></span></p>
       <p>Discovery Peers: <span id="discoveryPeers"></span></p>
 
-      <button id="createGrid">Spawn a new Grid CRO</button>
+      <button id="createGrid">Spawn a new Grid DRP</button>
       <span style="margin: 0 10px;">|</span>
-      <input id="gridInput" type="text" placeholder="Enter Grid CRO ID" />
-      <button id="joinGrid">Connect to existing Grid CRO</button>
+      <input id="gridInput" type="text" placeholder="Enter Grid DRP ID" />
+      <button id="joinGrid">Connect to existing Grid DRP</button>
       <p>
-        Connected to Grid CRO ID:
+        Connected to Grid DRP ID:
         <span id="gridId" style="text-decoration: underline;"></span>
         <button id="copyGridId" style="margin-left: 10px; display: none;">Copy</button>
       </p>
-      <p>Peers in CRO: <span id="objectPeers"></span></p>
+      <p>Peers in DRP: <span id="objectPeers"></span></p>
     </div>
 
     <div
