--- a/examples/local-bootstrap/index.html
+++ b/examples/local-bootstrap/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Topology - Local env</title>
+    <title>DRP - Local env</title>
   </head>
   <body>
     <div>
-      <h1>Topology Protocol - Local bootstrap connect</h1>
+      <h1>DRP - Local bootstrap connect</h1>
       <p>Test the connection to a boostrap node and connect your local peers.</p>
       <p>
         <fieldset id="fieldset_connect_bootstrap_node">
