--- a/examples/canvas/index.html
+++ b/examples/canvas/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Topology - Canvas</title>
+        <title>DRP - Canvas</title>
     </head>
 
     <body>
